part-1/ex-1.09/ping-pong/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: pv-main
          persistentVolumeClaim:
            claimName: main-app-claim
      containers:
        - name: ping-pong
          image: joonashak/dwk-ping-pong
          volumeMounts:
          - name: pv-main
            mountPath: /app/pv
