part-1/ex-1.09/ping-pong/manifests/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-pong-db
spec:
  serviceName: ping-pong-svc
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: postgres
          image: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/pgdata
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
