part-1/ex-1.09/ping-pong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: main
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
