part-1/ex-1.09/ping-pong/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-ing
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: ping-pong-svc
          servicePort: 2345
